@@ -15,7 +15,7 @@
 "cc65","hello-world",202,1037,3966,0
 "gcc-6502","hello-world",165,229,858,0
 "kickc","hello-world",60,228,873,0
-"llvm-mos","hello-world",134,282,1031,0
+"llvm-mos","hello-world",102,181,745,0
 "osdk-lcc65","hello-world",407,2679,8495,0
 "sdcc","hello-world",77,237,880,0
 "vbcc","hello-world",99,246,943,0
@@ -29,126 +29,126 @@
 "cc65","memcopy",94,196689,721210,0
 "gcc-6502","memcopy",135,106681,344627,0
 "kickc","memcopy",62,188460,557220,0
-"llvm-mos","memcopy",103,245812,671944,0
+"llvm-mos","memcopy",101,229434,647384,0
 "osdk-lcc65","memcopy",340,458814,1507551,0
 "sdcc","memcopy",107,213044,770273,0
 "vbcc","memcopy",93,180272,647376,0
 "cc65","0xcafe",394,1078,4117,0
 "gcc-6502","0xcafe",209,251,932,0
 "kickc","0xcafe",119,224,878,0
-"llvm-mos","0xcafe",168,296,1083,0
+"llvm-mos","0xcafe",136,199,805,0
 "osdk-lcc65","0xcafe",0,0,0,1
 "sdcc","0xcafe",0,0,0,1
 "vbcc","0xcafe",321,338,1263,0
 "cc65","sieve",1110,3374944,10992453,0
 "gcc-6502","sieve",1025,2991094,10374089,0
 "kickc","sieve",0,0,0,1
-"llvm-mos","sieve",4043,99925700,300000001,2
+"llvm-mos","sieve",1636,1709541,5346335,3
 "osdk-lcc65","sieve",9745,4812053,16502355,0
 "sdcc","sieve",9747,5509255,19108109,0
 "vbcc","sieve",918,3128976,10134340,0
 "cc65","aes256",6303,9797558,34768201,0
 "gcc-6502","aes256",7606,5026344,14014726,0
 "kickc","aes256",0,0,0,1
-"llvm-mos","aes256",10574,3972015,10746121,0
+"llvm-mos","aes256",3134,3423964,9051428,0
 "osdk-lcc65","aes256",14340,29780293,84684177,0
 "sdcc","aes256",0,0,0,1
 "vbcc","aes256",5083,5164481,15517821,0
 "cc65","mandelbrot",954,6289718,22340480,0
 "gcc-6502","mandelbrot",1775,2811811,10111503,0
 "kickc","mandelbrot",0,0,0,1
-"llvm-mos","mandelbrot",2097,1161994,3700233,0
+"llvm-mos","mandelbrot",1037,1938963,6216490,0
 "osdk-lcc65","mandelbrot",863,51159807,180732758,0
 "sdcc","mandelbrot",1208,12801384,44706483,0
 "vbcc","mandelbrot",1087,4796740,17771163,0
 "cc65","frogmove",2086,5297681,19508255,0
 "gcc-6502","frogmove",2280,1340538,4383526,0
 "kickc","frogmove",1615,1600503,5085372,0
-"llvm-mos","frogmove",2516,2556572,7802106,0
+"llvm-mos","frogmove",1765,2061810,6431030,0
 "osdk-lcc65","frogmove",2807,4677665,14701662,0
 "sdcc","frogmove",3132,18,67,3
 "vbcc","frogmove",1783,2403461,7517472,0
 "cc65","pi",1531,33383599,122047814,0
 "gcc-6502","pi",2244,34712909,129853690,0
 "kickc","pi",0,0,0,1
-"llvm-mos","pi",4772,99979356,300000002,2
+"llvm-mos","pi",2181,5700345,18680751,3
 "osdk-lcc65","pi",2785,11116565,37993365,3
 "sdcc","pi",5081,82114562,274557082,0
 "vbcc","pi",1410,29091944,106479957,0
 "cc65","shuffle",1893,953949,3310575,0
 "gcc-6502","shuffle",2195,806677,2939404,0
 "kickc","shuffle",0,0,0,1
-"llvm-mos","shuffle",5122,318037,975332,0
+"llvm-mos","shuffle",2681,366083,1129622,0
 "osdk-lcc65","shuffle",2263,913833,3023907,0
 "sdcc","shuffle",3127,1639891,5664038,3
 "vbcc","shuffle",1550,832979,2913575,0
 "cc65","bubble-sort",1587,8183449,29143902,0
 "gcc-6502","bubble-sort",1520,1455827,4718343,0
 "kickc","bubble-sort",0,0,0,1
-"llvm-mos","bubble-sort",4721,1607204,4582302,0
+"llvm-mos","bubble-sort",2160,1786895,5367315,0
 "osdk-lcc65","bubble-sort",2061,5078640,15239177,0
 "sdcc","bubble-sort",2353,2276760,6901461,3
 "vbcc","bubble-sort",1458,3005423,9372070,0
 "cc65","selection-sort",1584,4546272,16039648,0
 "gcc-6502","selection-sort",1689,1770729,5530968,0
 "kickc","selection-sort",0,0,0,1
-"llvm-mos","selection-sort",4883,1679850,4808421,0
+"llvm-mos","selection-sort",2224,1287338,3907564,0
 "osdk-lcc65","selection-sort",2123,3349708,10134811,0
 "sdcc","selection-sort",2447,2099280,6673491,3
 "vbcc","selection-sort",1445,1689500,5428080,0
 "cc65","insertion-sort",1543,2742874,9769795,0
 "gcc-6502","insertion-sort",1572,921912,3005682,0
 "kickc","insertion-sort",0,0,0,1
-"llvm-mos","insertion-sort",5011,1139906,3264933,0
+"llvm-mos","insertion-sort",2168,1037160,2928813,0
 "osdk-lcc65","insertion-sort",2027,2116795,6437330,0
 "sdcc","insertion-sort",2336,38874,128398,3
 "vbcc","insertion-sort",1428,1280885,4060301,0
 "cc65","merge-sort",2156,1159365,3981830,0
 "gcc-6502","merge-sort",2503,700754,2331044,0
 "kickc","merge-sort",0,0,0,1
-"llvm-mos","merge-sort",5858,99999999,300000002,2
+"llvm-mos","merge-sort",2861,99999999,300000002,2
 "osdk-lcc65","merge-sort",4270,1272299,4028621,0
 "sdcc","merge-sort",4160,16883,58244,3
 "vbcc","merge-sort",2219,740988,2410181,0
 "cc65","quick-sort",1697,897143,3112806,0
 "gcc-6502","quick-sort",1868,558108,1899078,0
 "kickc","quick-sort",0,0,0,1
-"llvm-mos","quick-sort",5069,250408,755292,0
+"llvm-mos","quick-sort",2437,289268,897327,0
 "osdk-lcc65","quick-sort",2517,1036880,3358937,0
 "sdcc","quick-sort",2566,85858794,300000001,2
 "vbcc","quick-sort",1767,538468,1786240,0
 "cc65","counting-sort",1972,557823,1885437,0
 "gcc-6502","counting-sort",2311,499477,1724489,0
 "kickc","counting-sort",0,0,0,1
-"llvm-mos","counting-sort",5506,75002196,300000004,2
+"llvm-mos","counting-sort",2665,223764,683589,0
 "osdk-lcc65","counting-sort",3737,659676,2137721,0
 "sdcc","counting-sort",3983,88185,281710,3
 "vbcc","counting-sort",1818,426495,1435174,0
 "cc65","radix-sort",2305,1935126,6394756,0
 "gcc-6502","radix-sort",2945,1878930,6592472,0
 "kickc","radix-sort",0,0,0,1
-"llvm-mos","radix-sort",6598,100000169,300000002,2
+"llvm-mos","radix-sort",3190,100000087,300000001,2
 "osdk-lcc65","radix-sort",4659,2388241,7924337,0
 "sdcc","radix-sort",4727,26709,89358,3
 "vbcc","radix-sort",2516,1965229,6561858,0
 "cc65","shell-sort",1618,1295463,4513897,0
 "gcc-6502","shell-sort",1797,710675,2337837,0
 "kickc","shell-sort",0,0,0,1
-"llvm-mos","shell-sort",5329,439010,1281880,0
+"llvm-mos","shell-sort",2440,99999997,300000001,2
 "osdk-lcc65","shell-sort",2172,1188789,3704984,0
 "sdcc","shell-sort",2498,198634,656935,3
 "vbcc","shell-sort",1606,767445,2458457,0
 "cc65","heap-sort",1793,1404960,4957712,0
 "gcc-6502","heap-sort",2211,740011,2478797,0
 "kickc","heap-sort",0,0,0,1
-"llvm-mos","heap-sort",5431,415094,1246369,0
+"llvm-mos","heap-sort",2553,99999998,300000001,2
 "osdk-lcc65","heap-sort",2744,1661441,5339768,0
 "sdcc","heap-sort",2902,99752,331838,3
 "vbcc","heap-sort",1890,722750,2336973,0
 "cc65","eight-queens",1084,8042882,28729340,0
 "gcc-6502","eight-queens",1067,1589670,4725549,0
 "kickc","eight-queens",593,1741322,5565918,0
-"llvm-mos","eight-queens",4961,1069958,3047642,0
+"llvm-mos","eight-queens",1579,1166420,3297863,0
 "osdk-lcc65","eight-queens",2649,23357198,72651727,0
 "sdcc","eight-queens",1173,4450966,14030163,0
 "vbcc","eight-queens",917,3140050,9766336,0
