@@ -2,7 +2,7 @@ var opt_size = {
 	"cc65": "-O",
 	"gcc-6502": "-O2",
 	"kickc": "",
-	"llvm-mos": "-O2",
+	"llvm-mos": "-Oz",
 	"osdk-lcc65": "-O2",
 	"sdcc": "--opt-code-size",
 	"vbcc": "-O=991",
@@ -12,7 +12,7 @@ var opt_speed = {
 	"cc65": "-Oirs",
 	"gcc-6502": "-O3",
 	"kickc": "",
-	"llvm-mos": "-O3",
+	"llvm-mos": "-Os",
 	"osdk-lcc65": "-O2",
 	"sdcc": "--opt-code-speed",
 	"vbcc": "-O=1023",
@@ -21,24 +21,24 @@ var opt_speed = {
 var bench_size = {
 	"type-sizes": { size: [ "char:1<br>short:2<br>int:2<br>long:4","char:1<br>short:2<br>int:2<br>long:4","char:1<br>short:2<br>int:2<br>long:4","char:1<br>short:2<br>int:2<br>long:4","char:1<br>short:1<br>int:2<br>long:2","char:1<br>short:2<br>int:2<br>long:4","char:1<br>short:2<br>int:2<br>long:4", ], speed: [ "char:1<br>short:2<br>int:2<br>long:4","char:1<br>short:2<br>int:2<br>long:4","char:1<br>short:2<br>int:2<br>long:4","char:1<br>short:2<br>int:2<br>long:4","char:1<br>short:1<br>int:2<br>long:2","char:1<br>short:2<br>int:2<br>long:4","char:1<br>short:2<br>int:2<br>long:4", ] },
 	"dummy": { size: [ 15,77,1,29,192,18,15, ], speed: [ 29,85,12,61,37,32,29, ] },
-	"hello-world": { size: [ 202,165,60,134,407,77,99, ], speed: [ 3966,858,873,1031,8495,880,943, ] },
+	"hello-world": { size: [ 202,165,60,102,407,77,99, ], speed: [ 3966,858,873,745,8495,880,943, ] },
 	"bytecpy": { size: [ 21,83,7,35,202,24,21, ], speed: [ 37,93,20,69,51,40,37, ] },
-	"memcopy": { size: [ 94,135,62,103,340,107,93, ], speed: [ 721210,344627,557220,671944,1507551,770273,647376, ] },
-	"0xcafe": { size: [ 394,209,119,168,"C","C",321, ], speed: [ 4117,932,878,1083,"C","C",1263, ] },
-	"sieve": { size: [ 1110,1025,"C","T",9745,9747,918, ], speed: [ 10992453,10374089,"C","T",16502355,19108109,10134340, ] },
-	"aes256": { size: [ 6303,7606,"C",10574,14340,"C",5083, ], speed: [ 34768201,14014726,"C",10746121,84684177,"C",15517821, ] },
-	"mandelbrot": { size: [ 954,1775,"C",2097,863,1208,1087, ], speed: [ 22340480,10111503,"C",3700233,180732758,44706483,17771163, ] },
-	"frogmove": { size: [ 2086,2280,1615,2516,2807,"R",1783, ], speed: [ 19508255,4383526,5085372,7802106,14701662,"R",7517472, ] },
-	"pi": { size: [ 1531,2244,"C","T","R",5081,1410, ], speed: [ 122047814,129853690,"C","T","R",274557082,106479957, ] },
-	"shuffle": { size: [ 1893,2195,"C",5122,2263,"R",1550, ], speed: [ 3310575,2939404,"C",975332,3023907,"R",2913575, ] },
-	"bubble-sort": { size: [ 1587,1520,"C",4721,2061,"R",1458, ], speed: [ 29143902,4718343,"C",4582302,15239177,"R",9372070, ] },
-	"selection-sort": { size: [ 1584,1689,"C",4883,2123,"R",1445, ], speed: [ 16039648,5530968,"C",4808421,10134811,"R",5428080, ] },
-	"insertion-sort": { size: [ 1543,1572,"C",5011,2027,"R",1428, ], speed: [ 9769795,3005682,"C",3264933,6437330,"R",4060301, ] },
+	"memcopy": { size: [ 94,135,62,101,340,107,93, ], speed: [ 721210,344627,557220,647384,1507551,770273,647376, ] },
+	"0xcafe": { size: [ 394,209,119,136,"C","C",321, ], speed: [ 4117,932,878,805,"C","C",1263, ] },
+	"sieve": { size: [ 1110,1025,"C","R",9745,9747,918, ], speed: [ 10992453,10374089,"C","R",16502355,19108109,10134340, ] },
+	"aes256": { size: [ 6303,7606,"C",3134,14340,"C",5083, ], speed: [ 34768201,14014726,"C",9051428,84684177,"C",15517821, ] },
+	"mandelbrot": { size: [ 954,1775,"C",1037,863,1208,1087, ], speed: [ 22340480,10111503,"C",6216490,180732758,44706483,17771163, ] },
+	"frogmove": { size: [ 2086,2280,1615,1765,2807,"R",1783, ], speed: [ 19508255,4383526,5085372,6431030,14701662,"R",7517472, ] },
+	"pi": { size: [ 1531,2244,"C","R","R",5081,1410, ], speed: [ 122047814,129853690,"C","R","R",274557082,106479957, ] },
+	"shuffle": { size: [ 1893,2195,"C",2681,2263,"R",1550, ], speed: [ 3310575,2939404,"C",1129622,3023907,"R",2913575, ] },
+	"bubble-sort": { size: [ 1587,1520,"C",2160,2061,"R",1458, ], speed: [ 29143902,4718343,"C",5367315,15239177,"R",9372070, ] },
+	"selection-sort": { size: [ 1584,1689,"C",2224,2123,"R",1445, ], speed: [ 16039648,5530968,"C",3907564,10134811,"R",5428080, ] },
+	"insertion-sort": { size: [ 1543,1572,"C",2168,2027,"R",1428, ], speed: [ 9769795,3005682,"C",2928813,6437330,"R",4060301, ] },
 	"merge-sort": { size: [ 2156,2503,"C","T",4270,"R",2219, ], speed: [ 3981830,2331044,"C","T",4028621,"R",2410181, ] },
-	"quick-sort": { size: [ 1697,1868,"C",5069,2517,"T",1767, ], speed: [ 3112806,1899078,"C",755292,3358937,"T",1786240, ] },
-	"counting-sort": { size: [ 1972,2311,"C","T",3737,"R",1818, ], speed: [ 1885437,1724489,"C","T",2137721,"R",1435174, ] },
+	"quick-sort": { size: [ 1697,1868,"C",2437,2517,"T",1767, ], speed: [ 3112806,1899078,"C",897327,3358937,"T",1786240, ] },
+	"counting-sort": { size: [ 1972,2311,"C",2665,3737,"R",1818, ], speed: [ 1885437,1724489,"C",683589,2137721,"R",1435174, ] },
 	"radix-sort": { size: [ 2305,2945,"C","T",4659,"R",2516, ], speed: [ 6394756,6592472,"C","T",7924337,"R",6561858, ] },
-	"shell-sort": { size: [ 1618,1797,"C",5329,2172,"R",1606, ], speed: [ 4513897,2337837,"C",1281880,3704984,"R",2458457, ] },
-	"heap-sort": { size: [ 1793,2211,"C",5431,2744,"R",1890, ], speed: [ 4957712,2478797,"C",1246369,5339768,"R",2336973, ] },
-	"eight-queens": { size: [ 1084,1067,593,4961,2649,1173,917, ], speed: [ 28729340,4725549,5565918,3047642,72651727,14030163,9766336, ] },
+	"shell-sort": { size: [ 1618,1797,"C","T",2172,"R",1606, ], speed: [ 4513897,2337837,"C","T",3704984,"R",2458457, ] },
+	"heap-sort": { size: [ 1793,2211,"C","T",2744,"R",1890, ], speed: [ 4957712,2478797,"C","T",5339768,"R",2336973, ] },
+	"eight-queens": { size: [ 1084,1067,593,1579,2649,1173,917, ], speed: [ 28729340,4725549,5565918,3297863,72651727,14030163,9766336, ] },
 };
