@@ -29,7 +29,7 @@
 "cc65","memcopy",94,196689,721210,0
 "gcc-6502","memcopy",186,82161,295740,0
 "kickc","memcopy",62,188460,557220,0
-"llvm-mos","memcopy",103,245812,671944,0
+"llvm-mos","memcopy",99,245812,671944,0
 "osdk-lcc65","memcopy",340,458814,1507551,0
 "sdcc","memcopy",107,213044,770273,0
 "vbcc","memcopy",93,180272,647376,0
@@ -43,112 +43,112 @@
 "cc65","sieve",1117,3198388,10322538,0
 "gcc-6502","sieve",1028,2964733,10306870,0
 "kickc","sieve",0,0,0,1
-"llvm-mos","sieve",4093,99916556,300000002,2
+"llvm-mos","sieve",1933,99908487,300000002,2
 "osdk-lcc65","sieve",9745,4812053,16502355,0
 "sdcc","sieve",9747,5509255,19108109,0
 "vbcc","sieve",835,2320411,7557827,0
 "cc65","aes256",6620,9739731,34669589,0
 "gcc-6502","aes256",10846,5036980,14017645,0
 "kickc","aes256",0,0,0,1
-"llvm-mos","aes256",12100,3966461,10794949,0
+"llvm-mos","aes256",4178,3600164,9718319,0
 "osdk-lcc65","aes256",14340,29780293,84684177,0
 "sdcc","aes256",0,0,0,1
 "vbcc","aes256",5238,5155340,15505793,0
 "cc65","mandelbrot",972,6262203,22240725,0
 "gcc-6502","mandelbrot",1818,2809759,10098056,0
 "kickc","mandelbrot",0,0,0,1
-"llvm-mos","mandelbrot",2139,1165644,3748486,0
+"llvm-mos","mandelbrot",1166,1142956,3646970,0
 "osdk-lcc65","mandelbrot",863,51159807,180732758,0
 "sdcc","mandelbrot",1208,12801384,44706483,0
 "vbcc","mandelbrot",1119,2839955,10366252,0
 "cc65","frogmove",2099,4351740,14813407,0
 "gcc-6502","frogmove",2548,1364782,4763936,0
 "kickc","frogmove",1615,1600503,5085372,0
-"llvm-mos","frogmove",2516,2556572,7802106,0
+"llvm-mos","frogmove",1820,2266364,7003234,0
 "osdk-lcc65","frogmove",2807,4677665,14701662,0
 "sdcc","frogmove",3132,18,67,3
 "vbcc","frogmove",1762,2381159,7461768,0
 "cc65","pi",1560,33128116,118495098,0
 "gcc-6502","pi",2544,35264978,131708199,0
 "kickc","pi",0,0,0,1
-"llvm-mos","pi",4813,99978601,300000000,2
+"llvm-mos","pi",2544,5355797,17416155,3
 "osdk-lcc65","pi",2785,11116565,37993365,3
 "sdcc","pi",5081,82114562,274557082,0
 "vbcc","pi",1498,28927423,106055420,0
 "cc65","shuffle",1902,921723,3156908,0
 "gcc-6502","shuffle",2329,790165,2885206,0
 "kickc","shuffle",0,0,0,1
-"llvm-mos","shuffle",5171,318153,980422,0
+"llvm-mos","shuffle",3010,349834,1082816,0
 "osdk-lcc65","shuffle",2263,913833,3023907,0
 "sdcc","shuffle",3127,1639891,5664038,3
 "vbcc","shuffle",1571,830949,2937938,0
 "cc65","bubble-sort",1617,6747944,22302710,0
 "gcc-6502","bubble-sort",1702,1440709,4672433,0
 "kickc","bubble-sort",0,0,0,1
-"llvm-mos","bubble-sort",4746,1606556,4579885,0
+"llvm-mos","bubble-sort",2431,1675042,4859578,0
 "osdk-lcc65","bubble-sort",2061,5078640,15239177,0
 "sdcc","bubble-sort",2353,2276760,6901461,3
 "vbcc","bubble-sort",1539,1621066,5551701,0
 "cc65","selection-sort",1606,3775838,12644139,0
 "gcc-6502","selection-sort",1871,1755907,5457493,0
 "kickc","selection-sort",0,0,0,1
-"llvm-mos","selection-sort",4915,1646562,4709990,0
+"llvm-mos","selection-sort",2518,1320253,3970903,0
 "osdk-lcc65","selection-sort",2123,3349708,10134811,0
 "sdcc","selection-sort",2437,2097750,6669411,3
 "vbcc","selection-sort",1453,1430380,4781998,0
 "cc65","insertion-sort",1570,2206565,7290541,0
 "gcc-6502","insertion-sort",1754,907018,2921469,0
 "kickc","insertion-sort",0,0,0,1
-"llvm-mos","insertion-sort",5064,1168458,3336807,0
+"llvm-mos","insertion-sort",2549,1170765,3383846,0
 "osdk-lcc65","insertion-sort",2027,2116795,6437330,0
 "sdcc","insertion-sort",2336,38874,128398,3
 "vbcc","insertion-sort",1694,1134844,3853605,0
 "cc65","merge-sort",2434,944769,3108194,0
 "gcc-6502","merge-sort",5547,687268,2309666,0
 "kickc","merge-sort",0,0,0,1
-"llvm-mos","merge-sort",5881,99999999,300000002,2
+"llvm-mos","merge-sort",3735,99999999,300000002,2
 "osdk-lcc65","merge-sort",4270,1272299,4028621,0
 "sdcc","merge-sort",4160,16883,58244,3
 "vbcc","merge-sort",2376,697687,2365205,0
 "cc65","quick-sort",1866,808378,2702048,0
 "gcc-6502","quick-sort",2328,527113,1836274,0
 "kickc","quick-sort",0,0,0,1
-"llvm-mos","quick-sort",5129,249291,753316,0
+"llvm-mos","quick-sort",2718,295034,903068,0
 "osdk-lcc65","quick-sort",2517,1036880,3358937,0
 "sdcc","quick-sort",2594,85770105,300000003,2
 "vbcc","quick-sort",1768,501176,1696752,0
 "cc65","counting-sort",2101,511665,1674284,0
 "gcc-6502","counting-sort",2567,91836424,300000001,2
 "kickc","counting-sort",0,0,0,1
-"llvm-mos","counting-sort",6110,75002512,300000004,2
+"llvm-mos","counting-sort",3350,75002196,300000001,2
 "osdk-lcc65","counting-sort",3737,659676,2137721,0
 "sdcc","counting-sort",3983,88185,281710,3
 "vbcc","counting-sort",1993,411970,1385238,0
 "cc65","radix-sort",2570,1826716,6022813,0
 "gcc-6502","radix-sort",3195,97476550,300000001,2
 "kickc","radix-sort",0,0,0,1
-"llvm-mos","radix-sort",6660,100000253,300000000,2
+"llvm-mos","radix-sort",4079,100000592,300000001,2
 "osdk-lcc65","radix-sort",4659,2388241,7924337,0
 "sdcc","radix-sort",4727,26709,89358,3
 "vbcc","radix-sort",2561,1938369,6506819,0
 "cc65","shell-sort",1763,1119462,3707610,0
 "gcc-6502","shell-sort",1949,672404,2227154,0
 "kickc","shell-sort",0,0,0,1
-"llvm-mos","shell-sort",7247,461287,1337162,0
+"llvm-mos","shell-sort",2817,462982,1371737,0
 "osdk-lcc65","shell-sort",2172,1188789,3704984,0
 "sdcc","shell-sort",2498,198634,656935,3
 "vbcc","shell-sort",1702,622057,2045890,0
 "cc65","heap-sort",2044,1208555,4042109,0
 "gcc-6502","heap-sort",3049,714292,2388354,0
 "kickc","heap-sort",0,0,0,1
-"llvm-mos","heap-sort",5438,414446,1244309,0
+"llvm-mos","heap-sort",2850,437518,1337582,0
 "osdk-lcc65","heap-sort",2744,1661441,5339768,0
 "sdcc","heap-sort",2902,99752,331838,3
 "vbcc","heap-sort",1874,689638,2241279,0
 "cc65","eight-queens",1063,7945084,28143974,0
 "gcc-6502","eight-queens",1144,1446454,4352300,0
 "kickc","eight-queens",593,1741322,5565918,0
-"llvm-mos","eight-queens",4883,1049354,2999224,0
+"llvm-mos","eight-queens",2295,1073224,3062845,0
 "osdk-lcc65","eight-queens",2649,23357198,72651727,0
 "sdcc","eight-queens",1173,4450966,14030163,0
 "vbcc","eight-queens",910,2765966,8559402,0
