@@ -4,6 +4,9 @@ MOS6502 compiler benchmark ChangeLog
 
 Online results at: https://raxiss.com/compiler-benchmark/bench.html
 
+(2023-06-13)
+------------
+  * Use -Os for speed and -Oz for size on llvm-mos. (issue: #4 , commit: 10bb15abc58fc992871990003dd13195862676a0)
 
 (2023-02-19)
 ------------
